--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "main": "server.js",
+	"engines": {
+        "node": "10.16.0"
+      }
     "scripts": {
         "start": "node server.js"
     },
