--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "main": "server.js",
 	"engines": {
-        "node": "10.16.0"
+        "node": "12.17.x"
       },
     "scripts": {
         "start": "node server.js"
